--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SoftSolutions</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <div class="container">
+            <h1>SoftSolutions</h1>
+            <p class="descripcion">Empresa dedicada a resolver problemas diarios mediante soluciones innovadoras de software. Nuestra misión es simplificar la vida de las personas a través de la tecnología, y nuestra visión es ser líderes en el desarrollo de herramientas inteligentes.</p>
+        </div>
+    </header>
 
+    <main>
+        <section id="proyectos" class="container">
+            <h2>Proyectos Destacados</h2>
+            <div class="proyecto">
+                <h3>Proyecto 1</h3>
+                <p>Desarrollo de un sistema de automatización para pequeñas empresas.</p>
+                <a href="#" class="enlace">Ver más</a>
+            </div>
+            <div class="proyecto">
+                <h3>Proyecto 2</h3>
+                <p>Chatbot inteligente para atención al cliente disponible 24/7.</p>
+                <a href="#" class="enlace">Ver más</a>
+            </div>
+            <div class="proyecto">
+                <h3>Proyecto 3</h3>
+                <p>Aplicación móvil para la gestión de tareas personales y profesionales.</p>
+                <a href="#" class="enlace">Ver más</a>
+            </div>
+        </section>
+
+        <section id="contacto" class="container">
+            <h2>Contáctanos</h2>
+            <form action="#" method="post">
+                <label for="nombre">Nombre:</label>
+                <input type="text" id="nombre" name="nombre" required>
+
+                <label for="email">Correo Electrónico:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="mensaje">Mensaje:</label>
+                <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
+
+                <button type="submit">Enviar</button>
+            </form>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container">
+            <p>&copy; SoftSolutions. Todos los derechos reservados.</p>
+            <ul class="redes-sociales">
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">LinkedIn</a></li>
+            </ul>
+        </div>
+    </footer>
+</body>
+</html>
